--- a/career.html
+++ b/career.html
@@ -26,48 +26,48 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown" aria-expanded="false">PRODUCTS</a>
                     <ul class="dropdown-menu bg-secondary" aria-labelledby="dropdown04">
-                        <li><a class="dropdown-item" href="#">MECHANICAL AND PROCESS EQUIPMENTS</a></li>
-                        <li><a class="dropdown-item" href="#">ELECTRICAL EQUIPMENTS</a></li>
-                        <li><a class="dropdown-item" href="#">VALVES</a></li>
-                        <li><a class="dropdown-item" href="#">PIPING MATERIAL, PLATE, SHEET AND STRUCTURE</a></li>
-                        <li><a class="dropdown-item" href="#">CLOSURE, FITTINGS AND FLANGES</a></li>
-                        <li><a class="dropdown-item" href="#">INSTRUMENTATION AND CONTROL EQUIPMENTS</a></li>
-                        <li><a class="dropdown-item" href="#">BOLTING, GASKET AND PACKING MATERIALS</a></li>
-                        <li><a class="dropdown-item" href="#">COMMUNICATION AND COMPUTER EQUIPMENTS</a></li>
-                        <li><a class="dropdown-item" href="#">SAFETY, PROTECTION, SECURITY AND FIRE FIGHTING EQUIPMENTS</a></li>
+                      <li><a class="dropdown-item" href="./mechpro.html">MECHANICAL AND PROCESS EQUIPMENTS</a></li>
+                      <li><a class="dropdown-item" href="./eletricalequipment.html">ELECTRICAL EQUIPMENTS</a></li>
+                      <li><a class="dropdown-item" href="./values.html">VALVES</a></li>
+                      <li><a class="dropdown-item" href="pipingmaterials.html">PIPING MATERIAL, PLATE, SHEET AND STRUCTURE</a></li>
+                      <li><a class="dropdown-item" href="./closure.html">CLOSURE, FITTINGS AND FLANGES</a></li>
+                      <li><a class="dropdown-item" href="./instrumentation.html">INSTRUMENTATION AND CONTROL EQUIPMENTS</a></li>
+                      <li><a class="dropdown-item" href="./bolting.html">BOLTING, GASKET AND PACKING MATERIALS</a></li>
+                      <li><a class="dropdown-item" href="./communication.html">COMMUNICATION AND COMPUTER EQUIPMENTS</a></li>
+                      <li><a class="dropdown-item" href="./saftey.html">SAFETY, PROTECTION, SECURITY AND FIRE FIGHTING EQUIPMENTS</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown" aria-expanded="false">SERVICES</a>
                     <ul class="dropdown-menu bg-secondary" aria-labelledby="dropdown04">
-                        <li><a class="dropdown-item" href="#">PROCUREMENT SOLUTIONS</a></li>
-                        <li><a class="dropdown-item" href="#">VALVES AND CONTROL</a></li>
-                        <li><a class="dropdown-item" href="#">METERING AND SYSTEMS</a></li>
-                        <li><a class="dropdown-item" href="#">PIPELINE REPAIR AND MAINTENANCE</a></li>
-                        <li><a class="dropdown-item" href="#">ELECTRICAL INSTRUMENTATION AND CONTROL</a></li>
-                        <li><a class="dropdown-item" href="#">MONITORING SECURITY SYSTEMS</a></li>
-                        <li><a class="dropdown-item" href="#">CORROSION CONTROL</a></li>
+                      <li><a class="dropdown-item" href="./procurement.html">PROCUREMENT SOLUTIONS</a></li>
+                      <li><a class="dropdown-item" href="./valuescnt.html">VALVES AND CONTROL</a></li>
+                      <li><a class="dropdown-item" href="./metering.html">METERING AND SYSTEMS</a></li>
+                      <li><a class="dropdown-item" href="./pipeline.html">PIPELINE REPAIR AND MAINTENANCE</a></li>
+                      <li><a class="dropdown-item" href="./electrical.html">ELECTRICAL INSTRUMENTATION AND CONTROL</a></li>
+                      <li><a class="dropdown-item" href="./monitoringsec.html">MONITORING SECURITY SYSTEMS</a></li>
+                      <li><a class="dropdown-item" href="./corrosion.html">CORROSION CONTROL</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown" aria-expanded="false">INDUSTRIES</a>
                     <ul class="dropdown-menu bg-secondary" aria-labelledby="dropdown04">
-                    <li><a class="dropdown-item" href="#">OIL AND GAS</a></li>
-                    <li><a class="dropdown-item" href="#"> POWER</a></li>
-                    <li><a class="dropdown-item" href="#">MARINE</a></li>
+                    <li><a class="dropdown-item" href="./oilandgas.html">OIL AND GAS</a></li>
+                    <li><a class="dropdown-item" href="./power.html"> POWER</a></li>
+                    <li><a class="dropdown-item" href="./marine.html">MARINE</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="#">CLIENTS</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">CAREERS</a>
+                    <a class="nav-link " href="./career.html">CAREERS</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link " href="./media.html">MEDIA</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link " href="#">CONTACT US</a>
+                    <a class="nav-link " href="./contact.html">CONTACT US</a>
                 </li>
                 </ul>
             </div>
