--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
         <style>
             .banner-image {
-              background-image: url('./images/news.png');
+              background-image: url('./images/img143.jpg');
               background-size: cover;
               
             }
@@ -33,35 +33,35 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown" aria-expanded="false">PRODUCTS</a>
                     <ul class="dropdown-menu bg-secondary aria-labelledby="dropdown04">
-                        <li><a class="dropdown-item" href="#">MECHANICAL AND PROCESS EQUIPMENTS</a></li>
-                        <li><a class="dropdown-item" href="#">ELECTRICAL EQUIPMENTS</a></li>
-                        <li><a class="dropdown-item" href="#">VALVES</a></li>
-                        <li><a class="dropdown-item" href="#">PIPING MATERIAL, PLATE, SHEET AND STRUCTURE</a></li>
-                        <li><a class="dropdown-item" href="#">CLOSURE, FITTINGS AND FLANGES</a></li>
-                        <li><a class="dropdown-item" href="#">INSTRUMENTATION AND CONTROL EQUIPMENTS</a></li>
-                        <li><a class="dropdown-item" href="#">BOLTING, GASKET AND PACKING MATERIALS</a></li>
-                        <li><a class="dropdown-item" href="#">COMMUNICATION AND COMPUTER EQUIPMENTS</a></li>
-                        <li><a class="dropdown-item" href="#">SAFETY, PROTECTION, SECURITY AND FIRE FIGHTING EQUIPMENTS</a></li>
+                      <li><a class="dropdown-item" href="./mechpro.html">MECHANICAL AND PROCESS EQUIPMENTS</a></li>
+                      <li><a class="dropdown-item" href="./eletricalequipment.html">ELECTRICAL EQUIPMENTS</a></li>
+                      <li><a class="dropdown-item" href="./values.html">VALVES</a></li>
+                      <li><a class="dropdown-item" href="pipingmaterials.html">PIPING MATERIAL, PLATE, SHEET AND STRUCTURE</a></li>
+                      <li><a class="dropdown-item" href="./closure.html">CLOSURE, FITTINGS AND FLANGES</a></li>
+                      <li><a class="dropdown-item" href="./instrumentation.html">INSTRUMENTATION AND CONTROL EQUIPMENTS</a></li>
+                      <li><a class="dropdown-item" href="./bolting.html">BOLTING, GASKET AND PACKING MATERIALS</a></li>
+                      <li><a class="dropdown-item" href="./communication.html">COMMUNICATION AND COMPUTER EQUIPMENTS</a></li>
+                      <li><a class="dropdown-item" href="./saftey.html">SAFETY, PROTECTION, SECURITY AND FIRE FIGHTING EQUIPMENTS</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown" aria-expanded="false">SERVICES</a>
                     <ul class="dropdown-menu bg-secondary" aria-labelledby="dropdown04">
-                        <li><a class="dropdown-item" href="#">PROCUREMENT SOLUTIONS</a></li>
-                        <li><a class="dropdown-item" href="#">VALVES AND CONTROL</a></li>
-                        <li><a class="dropdown-item" href="#">METERING AND SYSTEMS</a></li>
-                        <li><a class="dropdown-item" href="#">PIPELINE REPAIR AND MAINTENANCE</a></li>
-                        <li><a class="dropdown-item" href="#">ELECTRICAL INSTRUMENTATION AND CONTROL</a></li>
-                        <li><a class="dropdown-item" href="#">MONITORING SECURITY SYSTEMS</a></li>
-                        <li><a class="dropdown-item" href="#">CORROSION CONTROL</a></li>
+                      <li><a class="dropdown-item" href="./procurement.html">PROCUREMENT SOLUTIONS</a></li>
+                      <li><a class="dropdown-item" href="./valuescnt.html">VALVES AND CONTROL</a></li>
+                      <li><a class="dropdown-item" href="./metering.html">METERING AND SYSTEMS</a></li>
+                      <li><a class="dropdown-item" href="./pipeline.html">PIPELINE REPAIR AND MAINTENANCE</a></li>
+                      <li><a class="dropdown-item" href="./electrical.html">ELECTRICAL INSTRUMENTATION AND CONTROL</a></li>
+                      <li><a class="dropdown-item" href="./monitoringsec.html">MONITORING SECURITY SYSTEMS</a></li>
+                      <li><a class="dropdown-item" href="./corrosion.html">CORROSION CONTROL</a></li>
                     </ul>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-bs-toggle="dropdown" aria-expanded="false">INDUSTRIES</a>
                     <ul class="dropdown-menu bg-secondary" aria-labelledby="dropdown04">
-                    <li><a class="dropdown-item" href="#">OIL AND GAS</a></li>
-                    <li><a class="dropdown-item" href="#"> POWER</a></li>
-                    <li><a class="dropdown-item" href="#">MARINE</a></li>
+                    <li><a class="dropdown-item" href="./oilandgas.html">OIL AND GAS</a></li>
+                    <li><a class="dropdown-item" href="./power.html"> POWER</a></li>
+                    <li><a class="dropdown-item" href="./marine.html">MARINE</a></li>
                     </ul>
                 </li>
                 <li class="nav-item">
@@ -83,14 +83,54 @@
     </header>
       <!-- Banner Image  -->
       <div class="banner-image w-100 vh-100 d-flex justify-content-center align-items-center">
-      <div class="content text-center">
-        <div class="media">
-        <h1 class="text-white">NEWS AND<br> MEDIA</h1>
-        </div>
       </div>
     </div>
 
-    
+    <div class="container">
+      <div class="row">
+          <div class="col-md-7">
+            <h4>Get in touch</h4>
+              <div class="mb-3">
+                  <label for="formGroupExampleInput" class="form-label">Name</label>
+                  <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Enter your name">
+                </div>
+                <div class="mb-3">
+                  <label for="formGroupExampleInput2" class="form-label">Email</label>
+                  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Enter your email">
+                </div>
+                <div class="mb-3">
+                  <label for="formGroupExampleInput2" class="form-label">Contact Number</label>
+                  <input type="text" class="form-control" id="formGroupExampleInput2" placeholder="Enter your number">
+                </div>
+                <div class="mb-3">
+                  <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                  <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                </div>
+                <button class="btn btn-primary">Submit</button>
+          </div>
+          <div class="col-md-5 ">
+            <h4>Contact us</h4><hr>
+            <div class="mt-4">
+                <div class="d-flex">
+                  <i class="bi bi-geo-alt-fill"></i>
+                  <p >Address: 198 West 21th Street, Suite 721 New York NY 10016</p>
+                </div><hr>
+                <div class="d-flex">
+                  <i class="bi bi-telephone-fill"></i>
+                  <p>Contact :- 8888888888</p>
+                </div><hr>
+                <div class="d-flex">
+                  <i class="bi bi-envelope-fill"></i>
+                  <p>Email:- Contact@gmail.com</p>
+                </div><hr>
+                <div class="d-flex">
+                  <i class="bi bi-browser-chrome"></i>
+                  <p>Website: www.contact.com</p>
+                </div><hr>
+            </div>
+          </div>
+      </div>
+  </div>
       <!--fotter-->
     <div class="bg-warning">
         <div class="container">
