update logo text

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark ">
             <div class="container-fluid">
-            <a class="navbar-brand" href="#">Expand at md</a>
+            <a class="navbar-brand" href="#">DIOL</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -82,15 +82,17 @@
         </nav>
     </header>
       <!-- Banner Image  -->
-      <div class="banner-image w-100 vh-100 d-flex justify-content-center align-items-center">
+      <div class=" opacity-75 banner-image w-100 vh-100 d-flex justify-content-center align-items-center">
       <div class="content text-center">
         <h1 class="text-white">Reliable Services Across Borders</h1>
       </div>
     </div>
     <div class="px-4 py-5 my-5 text-center">
-      <h1 class="display-5 fw-bold">Centered hero</h1>
+      <h1 class="display-5 fw-bold">What we are all about</h1>
       <div class="col-lg-6 mx-auto">
-        <p class="lead mb-4">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+        <p class="lead mb-4">At DIOL, we continue to grow our technical competence and managerial knowledge base in leaps and bounds by listening to our clients and partners and tailoring our business model to best address their needs and expectations. Our team of highly competent and knowledgeable staff remains our backbone.
+          We appreciate and count on your support as we continue to grow together.
+        </p>
         <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
         </div>
       </div>
@@ -101,8 +103,9 @@
           <div class=" w-100 vh-100 d-flex justify-content-center align-items-center">
               <div class="contnt text-center">
               <h1 class="text-white">MISSION</h1>
-              <p>Be the Model through knowledge, teamwork and <br>communication with the aim of enhancing efficiencies for our <br>clients.</p>
+              <p>Our mission is to consistently maintain customer satisfaction, <br>trust and integrity by delivering quality products and services <br>conforming to industry best practices and continuous process improvement.</p>
               <a href="./procurement.html" class="btn">OUR SERVICES</a>
+              <hr>
           </div>
       </div>
     </section> 
