--- a/about-us.html
+++ b/about-us.html
@@ -8,9 +8,9 @@
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     </head>
     <header>
-        <nav class="navbar  navbar-expand-md navbar-light bg-light" aria-label="Fourth navbar example">
+        <nav class="navbar navbar-expand-md navbar-light bg-light" aria-label="Fourth navbar example">
             <div class="container-fluid">
-            <a class="navbar-brand" href="#">Expand at md</a>
+            <a class="navbar-brand" href="#">DIOL</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
@@ -79,12 +79,8 @@
             <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
               <div class="col-lg-6">
                 <h1 class="display-1 fw-bold lh-1 mb-3 ">ABOUT US</h1>
-                <p class="lead">As a service company, Timproxy operates a diversified business with a special focus on Oil and Gas, Marine and the Power Industry.
-
-                  Our specialty cover equipment’s manufactured by major OEM’s.
-                  We are located in Lagos, Nigeria with an independent subsidiary in the United Kingdom.
-                  
-                  At Timproxy our main focus is to provide complete support to projects specializing in the selection, qualification and monitoring of our clients oil servicing needs. We have achieved a proven pedigree and track record of success, delivering significant and sustainable commercial value to a growing number of clients across a broad range of industry sectors.  We also provide services from MRO to large-scale projects.
+                <p class="lead">Doods International Operations Limited (DIOL) was founded and registered in the Federal Republic of Nigeria and is recognized as Nigeria’s leading provider of Global Supply Chain and Project Management Services to the Oil & Gas, Manufacturing and Power Industries.
+                  We at Doods International Operations Limited are passionate about the success of our clients, the development of our personnel skills taking into consideration local content enhancement whilst being committed to protecting our environment and executing our corporate social responsibility.
                   
                  </p>
               </div>
