--- a/contact.html
+++ b/contact.html
@@ -17,7 +17,7 @@
     <header>
         <nav class="navbar fixed-top navbar-expand-lg navbar-dark p-md-3">
             <div class="container-fluid">
-            <a class="navbar-brand" href="#">Expand at md</a>
+            <a class="navbar-brand" href="#">DIOL</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
