--- a/electrical.html
+++ b/electrical.html
@@ -10,7 +10,7 @@
     <header>
         <nav class="navbar  navbar-expand-md navbar-light bg-light" aria-label="Fourth navbar example">
             <div class="container-fluid">
-            <a class="navbar-brand" href="#">Expand at md</a>
+            <a class="navbar-brand" href="#">DIOL</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample04" aria-controls="navbarsExample04" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
