--- a/metering.html
+++ b/metering.html
@@ -33,14 +33,14 @@
               <li class="nav-item dropdown">
                   <a class="nav-link dropdown-toggle" href="./metering.html" id="dropdown04" data-bs-toggle="dropdown" aria-expanded="false">PRODUCTS</a>
                   <ul class="dropdown-menu bg-secondary" aria-labelledby="dropdown04">
-                    <li><a class="dropdown-item" href="#metering">FLOW METERING EQUIPMENTS</a></li>
-                    <li><a class="dropdown-item" href="#valves">VALVES AND CONTROL</a></li>
-                    <li><a class="dropdown-item" href="#powergen">POWER GENERATION EQUIPMENTS</a></li>
-                    <li><a class="dropdown-item" href="#powertrans">POWER TRANSMISSION AND <br> DISTRIBUTION EQUIPMENTS</a></li>
-                    <li><a class="dropdown-item" href="#mechanical">MECHANICAL AND ELECTRICAL <br> EQUIPMENTS</a></li>
-                    <li><a class="dropdown-item" href="#instrumentation">INSTRUMENTATION SPARES  <br>AND EQUIPMENTS</a></li>
-                    <li><a class="dropdown-item" href="#piping">PIPING FITTING AND FLANGES</a></li>
-                    <li><a class="dropdown-item" href="#pump">PUMP AND COMPRESSOR</a></li>
+                    <li><a class="dropdown-item" href="./metering.html#metering">FLOW METERING EQUIPMENTS</a></li>
+                    <li><a class="dropdown-item" href="./metering.html#valves">VALVES AND CONTROL</a></li>
+                    <li><a class="dropdown-item" href="./metering.html#powergen">POWER GENERATION EQUIPMENTS</a></li>
+                    <li><a class="dropdown-item" href="./metering.html#powertrans">POWER TRANSMISSION AND <br> DISTRIBUTION EQUIPMENTS</a></li>
+                    <li><a class="dropdown-item" href="./metering.html#mechanical">MECHANICAL AND ELECTRICAL <br> EQUIPMENTS</a></li>
+                    <li><a class="dropdown-item" href="./metering.html#instrumentation">INSTRUMENTATION SPARES  <br>AND EQUIPMENTS</a></li>
+                    <li><a class="dropdown-item" href="./metering.html#piping">PIPING FITTING AND FLANGES</a></li>
+                    <li><a class="dropdown-item" href="./metering.html#pump">PUMP AND COMPRESSOR</a></li>
                   </ul>
               </li>
               
