Implement changes in header and footer of created pages

--- a/communication.html
+++ b/communication.html
@@ -32,16 +32,16 @@
                   <a class="nav-link " href="./about-us.html">ABOUT US</a>
               </li>
               <li class="nav-item dropdown">
-                  <a class="nav-link dropdown-toggle" href="./metering.html" id="dropdown04" data-bs-toggle="dropdown" aria-expanded="false">PRODUCTS</a>
+                  <a class="nav-link dropdown-toggle" href="./products.html" id="dropdown04" data-bs-toggle="dropdown" aria-expanded="false">PRODUCTS</a>
                   <ul class="dropdown-menu bg-secondary" aria-labelledby="dropdown04">
-                    <li><a class="dropdown-item" href="./metering.html#metering">FLOW METERING EQUIPMENTS</a></li>
-                    <li><a class="dropdown-item" href="./metering.html#valves">VALVES AND CONTROL</a></li>
-                    <li><a class="dropdown-item" href="./metering.html#powergen">POWER GENERATION EQUIPMENTS</a></li>
-                    <li><a class="dropdown-item" href="./metering.html#powertrans">POWER TRANSMISSION AND <br> DISTRIBUTION EQUIPMENTS</a></li>
-                    <li><a class="dropdown-item" href="./metering.html#mechanical">MECHANICAL AND ELECTRICAL <br> EQUIPMENTS</a></li>
-                    <li><a class="dropdown-item" href="./metering.html#instrumentation">INSTRUMENTATION SPARES  <br>AND EQUIPMENTS</a></li>
-                    <li><a class="dropdown-item" href="./metering.html#piping">PIPING FITTING AND FLANGES</a></li>
-                    <li><a class="dropdown-item" href="./metering.html#pump">PUMP AND COMPRESSOR</a></li>
+                    <li><a class="dropdown-item" href="./products.html#metering">FLOW METERING EQUIPMENTS</a></li>
+                    <li><a class="dropdown-item" href="./products.html#valves">VALVES AND CONTROL</a></li>
+                    <li><a class="dropdown-item" href="./products.html#powergen">POWER GENERATION EQUIPMENTS</a></li>
+                    <li><a class="dropdown-item" href="./products.html#powertrans">POWER TRANSMISSION AND <br> DISTRIBUTION EQUIPMENTS</a></li>
+                    <li><a class="dropdown-item" href="./products.html#mechanical">MECHANICAL AND ELECTRICAL <br> EQUIPMENTS</a></li>
+                    <li><a class="dropdown-item" href="./products.html#instrumentation">INSTRUMENTATION SPARES  <br>AND EQUIPMENTS</a></li>
+                    <li><a class="dropdown-item" href="./products.html#piping">PIPING FITTING AND FLANGES</a></li>
+                    <li><a class="dropdown-item" href="./products.html#pump">PUMP AND COMPRESSOR</a></li>
                   </ul>
               </li>
               
@@ -149,7 +149,7 @@
                   <ul class="nav flex-column">
                     <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-muted">Home</a></li>
                 <li class="nav-item"><a href="./about-us.html" class="nav-link px-2 text-muted">About us</a></li>
-                <li class="nav-item"><a href="./metering.html" class="nav-link px-2 text-muted">product</a></li>
+                <li class="nav-item"><a href="./products.html" class="nav-link px-2 text-muted">product</a></li>
                 <li class="nav-item"><a href="./oilandgas.html" class="nav-link px-2 text-muted">services</a></li>
                 <li class="nav-item"><a href="./client.html" class="nav-link px-2 text-muted">Clients</a></li>
                 <li class="nav-item"><a href="./contact.html" class="nav-link px-2 text-muted">contact us</a></li>
