--- a/products.html
+++ b/products.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 
 <head>
@@ -10,11 +10,10 @@
   <link rel="mask-icon" href="../../assets/img/favicons/safari-pinned-tab.svg" color="#7952b3">
   <link rel="icon" href="./favicoin/favicon.ico">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>HOME</title>
+  <title>PRODUCTS</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/font-proxima-nova@1.0.1/style.min.css">
   <link rel="stylesheet" href="./styles.css">
   <link rel="stylesheet" href="aos-by-red.css">
-  <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
   <link href="./bootstrap-5.3.0-dist/css/bootstrap.css" rel="stylesheet">
 </head>
 <header>
@@ -75,90 +74,137 @@
     </div>
   </nav>
 </header>
-<!-- Banner Image  -->
-<div class="hero" data-aos="fade-up">
-  <h1 class="fw-bold text-white">It's a whole new <span class="typewriter"></span><br>with us<br><span class="fs-5"> - DIOL</span></h1>
-</div>
-
-
-<div class="px-4 py-5 my-5 text-center" data-aos="fade-up">
-  <h2 class="mb-3">VISION STATEMENT</h2>
-  <div class="col-lg-6 mx-auto">
-    <p class="mb-4">At DOODS, we continue to grow our technical competence and managerial knowledge base in leaps
-      and bounds by listening to our clients and partners and tailoring our business model to best address their needs
-      and expectations. Our team of highly competent and knowledgeable staff remains our backbone. We appreciate and
-      count on your support as we continue to grow together.</p>
-    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-    </div>
-  </div>
-</div>
-<!--mission-->
-<section class="mission" data-aos="fade-up">
-  <div class="container">
-    <div class=" w-100 vh-100 d-flex justify-content-center align-items-center">
-      <div class="contnt text-center">
-        <h2 class="text-white mb-3">MISSION</h2>
-        <p>Our mission is to consistently maintain customer satisfaction, trust and <br>
-          integrity by delivering quality products and services conforming to<br> industry best practices and continuous
-          process improvement.</p>
-        <a href="./products.html" class="btn">OUR SERVICES</a>
+<section class="product">
+  <div class="metering" id="metering">
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="./images/flow-meters.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
+            height="500" loading="lazy">
+        </div>
+        <div class="col-lg-6">
+          <h2 class="display-5 fw-bold lh-1 mb-3">FLOW METERING EQUIPMENTS</h2>
+          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
+            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
+            extensive prebuilt components, and powerful JavaScript plugins.</p>
+        </div>
       </div>
     </div>
+  </div>
+  <div class="valves" id="valves">
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-lg-6">
+          <h2 class="display-5 fw-bold lh-1 mb-3">VALVES AND CONTROL</h2>
+          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
+            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
+            extensive prebuilt components, and powerful JavaScript plugins.</p>
+        </div>
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="./images/control-valves.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
+            height="500" loading="lazy">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="powergen" id="powergen">
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="./images/power-generation-main.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+            width="700" height="500" loading="lazy">
+        </div>
+        <div class="col-lg-6">
+          <h2 class="display-5 fw-bold lh-1 mb-3">POWER GENERATION EQUIPMENTS</h2>
+          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
+            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
+            extensive prebuilt components, and powerful JavaScript plugins.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="powertrans" id="powertrans">
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-lg-6">
+          <h2 class="display-5 fw-bold lh-1 mb-3">POWER TRANSMISSION AND <br> DISTRIBUTION EQUIPMENTS</h2>
+          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
+            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
+            extensive prebuilt components, and powerful JavaScript plugins.</p>
+        </div>
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="./images/transmission-distribution.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+            width="700" height="500" loading="lazy">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mechanical" id="mechanical">
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="./images/mech.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
+            height="500" loading="lazy">
+        </div>
+        <div class="col-lg-6">
+          <h2 class="display-5 fw-bold lh-1 mb-3">MECHANICAL AND ELECTRICAL <br> EQUIPMENTS</h2>
+          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
+            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
+            extensive prebuilt components, and powerful JavaScript plugins.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="instrumentation" id="instrumentation">
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-lg-6">
+          <h2 class="display-5 fw-bold lh-1 mb-3">INSTRUMENTATION SPARES <br>AND EQUIPMENTS</h2>
+          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
+            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
+            extensive prebuilt components, and powerful JavaScript plugins.</p>
+        </div>
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="./images/Instrumentation_Equipment_.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes"
+            width="700" height="500" loading="lazy">
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="pipes" id="pipes">
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="./images/pipessssss.jpg" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
+            height="500" loading="lazy">
+        </div>
+        <div class="col-lg-6">
+          <h2 class="display-5 fw-bold lh-1 mb-3">PIPING FITTING AND FLANGES</h2>
+          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
+            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
+            extensive prebuilt components, and powerful JavaScript plugins.</p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="pump" id="pump">
+    <div class="container col-xxl-8 px-4 py-5">
+      <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+        <div class="col-lg-6">
+          <h2 class="display-5 fw-bold lh-1 mb-3">PUMP AND COMPRESSOR</h2>
+          <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most
+            popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system,
+            extensive prebuilt components, and powerful JavaScript plugins.</p>
+        </div>
+        <div class="col-10 col-sm-8 col-lg-6">
+          <img src="./images/pump.png" class="d-block mx-lg-auto img-fluid" alt="Bootstrap Themes" width="700"
+            height="500" loading="lazy">
+        </div>
+      </div>
+    </div>
+  </div>
 </section>
-<!--OUR Strategy-->
-<div class="container" data-aos="fade-up">
-  <div class="album py-5 bg-white">
-    <div>
-      <h2 class="Strategy d-flex justify-content-center align-items-center">OUR STRATEGY</h2>
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
-        <div class="col">
-            <div class="card border-0"><img src="./images/strategy-img1.jpg"></div>
-            <div class="p-4 pb-5 h-25 text-center">
-              <h3>SAFETY AND THE ENVIRONMENT</h3>
-              <p class="lead text-secondary">We relentlessly pursue our goal of providing an incident free work place for our
-                people at all times and at any location. We care about the safe management of the environment and will protect
-                it by conserving resources, reducing waste and preventing environmental pollution</p>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card border-0"><img src="./images/strategy-img2.jpg"></div>
-            <div class="p-4 pb-5 text-center d-grid">
-              <h3>INTEGRITY</h3>
-              <p class="lead text-secondary">We apply the highest ethical standards to everything we do. Integrigty, honesty and
-                accountability are at the core of our business. We believe that by treating our clients and suppliers fairly and
-                with respect will earn their trust and we can build a sustainable sucess together.</p>
-            </div>
-        </div>
-        <div class="col">
-            <div class="card border-0"><img src="./images/strategy-img3.jpg"></div>
-            <div class="p-4 pb-5 text-center d-grid">
-              <h3>CUSTOMER<br>SATISFACTION</h3>
-              <p class="lead text-secondary">We are committed to openly and honestly working with our clients and customers in
-                order to build a longterm relationship and to develop and deliver the right solution that makes a real
-                contribution to the competitiveness of our customers.</p>
-            </div>
-        </div>
-      </div>
-    </div>
-  </div>
-</div>
-<!--values-->
-<div class="values" data-aos="fade-up">
-  <div class="w-100 d-flex justify-content-center align-items-center container">
-    <div class="contnt text-center">
-      <h2 class="text-white">OUR VALUES</h2>
-      <p>At DOODS, we continue to grow our technical competence and managerial knowledge base <br> in leaps and bounds
-        by listening to our clients and partners and tailoring our business <br> model to best address their needs and
-        expectations. Our team of highly competent and knowledgeable staff <br> remains our backbone. We appreciate and
-        count on your support as we continue to grow together.</p>
-      <div class="d-grid justify-content-center">
-        <a href="#" class="btn join-us-btn border-dark text-dark">JOIN US</a>
-      </div>
-    </div>
-  </div>
-</div>
 
-<!--Footer-->
 <footer data-aos="fade-up">
   <div class="container">
     <div class="row g-5">
@@ -233,40 +279,13 @@
     </div>
   </div>
 </footer>
-
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
 <script>
   AOS.init({
     duration: 2000,
     once: false,
   });
-
-  const worldElement = document.querySelector('.typewriter');
-  const words = ['experience', 'world', 'era'];
-  let wordIndex = 0;
-  let charIndex = 0;
-
-  function typeWriter() {
-    const currentWord = words[wordIndex];
-    if (charIndex < currentWord.length) {
-      const currentText = currentWord.slice(0, charIndex + 1);
-      worldElement.innerHTML = currentText;
-      charIndex++;
-    } else {
-      setTimeout(() => {
-        charIndex = 0;
-        wordIndex = (wordIndex + 1) % words.length;
-        worldElement.innerHTML = '';
-      }, 2000);
-    }
-    setTimeout(typeWriter, 200);
-  }
-
-  typeWriter();
-
-
 </script>
-
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
   integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p" crossorigin="anonymous"></script>
 <script src="./bootstrap-5.3.0-dist/js/bootstrap.min.js"></script>
