Implement major modification

--- a/client.html
+++ b/client.html
@@ -79,7 +79,7 @@
   <div class="album py-5 bg-white">
     <div class="container">
       <h2 class="Strategy d-flex justify-content-center align-items-center">CLIENTS</h2>
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <div class="row row-cols-1 row-cols-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
             <img src="./images/airtel.jpg">
@@ -134,7 +134,7 @@
         <p>Lagos Office</p>
         <p>Doods International Operations Limited Portal House, 5B, Adedeji Close, Opebi, Lagos State, Nigeria.</p>
         <p>Contact No: +2348057416329</p>
-        <p>Email:-info@doodsltd.com</p>
+        <p>Email: info@doodsltd.com</p>
         <p>Website: www.doodsltd.com</p>
       </div>
       <div class="col-lg-4">
@@ -194,7 +194,7 @@
       <p>© 2023. All rights reserved</p>
     </div>
     <div class="d-grid align-items-end justify-content-start">
-      <p class="attribution">Website by <a href="https://hashtagng.com" target="_blank" class="text-decoration-none text-primary attribution">Hashtag-Ng</a></p>
+      <p class="attribution">Website by <a href="https://hashtagng.com" target="_blank" class="text-decoration-none text-primary attribution">Hashtag</a></p>
     </div>
   </div>
 </footer>
