--- a/oilandgas.html
+++ b/oilandgas.html
@@ -103,7 +103,7 @@
         <p>Lagos Office</p>
         <p>Doods International Operations Limited Portal House, 5B, Adedeji Close, Opebi, Lagos State, Nigeria.</p>
         <p>Contact No: +2348057416329</p>
-        <p>Email:-info@doodsltd.com</p>
+        <p>Email: info@doodsltd.com</p>
         <p>Website: www.doodsltd.com</p>
       </div>
       <div class="col-lg-4">
@@ -163,7 +163,7 @@
       <p>© 2023. All rights reserved</p>
     </div>
     <div class="d-grid align-items-end justify-content-start">
-      <p class="attribution">Website by <a href="https://hashtagng.com" target="_blank" class="text-decoration-none text-primary attribution">Hashtag-Ng</a></p>
+      <p class="attribution">Website by <a href="https://hashtagng.com" target="_blank" class="text-decoration-none text-primary attribution">Hashtag</a></p>
     </div>
   </div>
 </footer>
