Add scroll down butto on home page

--- a/index.html
+++ b/index.html
@@ -106,9 +106,12 @@
     <span class="visually-hidden">Next</span>
   </button>
 </div>
+<a href="#vision" class="text-center d-grid justify-content-center aos-init aos-animate" data-aos="fade-up" data-aos-easing="ease" data-aos-delay="800">
+  <img class="scroll-down" src="./images/scroll-down-arrow.png" alt="">
+</a>
 
 
-<div class="px-4 py-5 my-5 text-center" data-aos="fade-up">
+<div id="vision" class="px-4 py-5 my-5 text-center" data-aos="fade-up">
   <h2 class="mb-3">VISION STATEMENT</h2>
   <div class="col-lg-6 mx-auto">
     <p class="mb-4">At DOODS, we continue to grow our technical competence and managerial knowledge base in leaps
